Added user_id to batch_assess, took the JSON out of translate and translated into Finnish

--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-12-07 18:51+0200\n"
+"POT-Creation-Date: 2018-01-23 17:07+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1006,6 +1006,7 @@ msgid "Batch create and assess submissions"
 msgstr "Luo ja arvostele palautusjoukkoja"
 
 #: edit_course/templates/edit_course/batch_assess.html:21
+#, python-format
 msgid ""
 "\n"
 "<p><em>Use only if you know what you are doing!</em></p>\n"
@@ -1015,47 +1016,25 @@ msgid ""
 "\t<dt>XXXXX1 and XXXXX2</dt>\n"
 "    <dd>the real student ids</dd>\n"
 "\t<dt>X1 (integer)</dt>\n"
-"    <dd>the system userprofile id of the desired grader</dd>\n"
+"    <dd>the system userprofile id of the desired grader. Your userprofile id "
+"is <b>%(id)s.</b></dd>\n"
 "\t<dt>Z1 and Z2 (integers)</dt>\n"
 "    <dd>the system exercise ids</dd>\n"
 "</dl>\n"
-"<pre>{\n"
-"  \"objects\": [\n"
-"    {\n"
-"      \"students_by_student_id\": [\n"
-"        \"XXXXX1\"\n"
-"      ],\n"
-"      \"feedback\": \"Nicely solved exercise!\",\n"
-"      \"grader\": X1,\n"
-"      \"exercise_id\": Z1,\n"
-"      \"submission_time\": \"2014-09-24 11:50\",\n"
-"      \"points\": 100\n"
-"    },\n"
-"    {\n"
-"      \"students_by_student_id\": [\n"
-"        \"XXXXX2\"\n"
-"      ],\n"
-"      \"feedback\": \"You can do better!\",\n"
-"      \"grader\": X1,\n"
-"      \"exercise_id\": Z2,\n"
-"      \"submission_time\": \"2014-09-24 11:50\",\n"
-"      \"points\": 20\n"
-"    },\n"
-"    {\n"
-"      \"students_by_email\": [\n"
-"        \"none@no.email\"\n"
-"      ],\n"
-"      \"feedback\": \"Last one.\",\n"
-"      \"grader\": X1,\n"
-"      \"exercise_id\": Z2,\n"
-"      \"submission_time\": \"2014-09-24 11:50\",\n"
-"      \"points\": 1\n"
-"    }\n"
-"  ]\n"
-"}\n"
-"</pre>\n"
-"       "
 msgstr ""
+"\n"
+"<p><em>Käytä vain jos tiedät, mitä olet tekemässä!</em></p>\n"
+"<p>Lähettämällä tämän voit yrittää luoda ja arvostella useita tehtäviä "
+"automaattisesti.</p>\n"
+"<dl>\n"
+"\t<dt>XXXXX1 ja XXXXX2</dt>\n"
+"    <dd>oikeat opiskelijanumerot</dd>\n"
+"\t<dt>X1 (integer)</dt>\n"
+"    <dd>Toivotun arvostelijan userprofile id. Sinun userprofile id on <b>"
+"%(id)s</b>.</dd>\n"
+"\t<dt>Z1 ja Z2 (integers)</dt>\n"
+"    <dd>tehtävien IDt</dd>\n"
+"</dl>\n"
 
 #: edit_course/templates/edit_course/build_log.html:9
 msgid "Build initated by"
@@ -1571,7 +1550,10 @@ msgid "Minimum group size cannot exceed maximum size."
 msgstr "Ryhmän koon alaraja ei voi olla suurempi kuin yläraja."
 
 #: exercise/exercise_models.py:369
-#, python-brace-format
+#, fuzzy, python-format, python-brace-format
+#| msgid ""
+#| "Deadline for the exercise has passed. Late submissions are allowed until "
+#| "{date} but points are only worth {percent:d}% of normal."
 msgid ""
 "Deadline for the exercise has passed. Late submissions are allowed until "
 "{date} but points are only worth {percent:d}% of normal."
