fixed broken translations

--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -1015,7 +1015,8 @@ msgid ""
 "<dl>\n"
 "\t<dt>XXXXX1 and XXXXX2</dt>\n"
 "    <dd>the real student ids</dd>\n"
-"\t<dt>X1 (integer)</dt> <p>Your userprofile id is <b>%(id)s</b>.</p>\n"
+"\t<dt>X1 (integer)</dt>\n"
+"    <dd>the system userprofile id of the desired grader. Your userprofile id is <b>%(id)s</b>.</dd>\n"
 "\t<dt>Z1 and Z2 (integers)</dt>\n"
 "    <dd>the system exercise ids</dd>\n"
 "</dl>\n"
@@ -1027,7 +1028,8 @@ msgstr ""
 "<dl>\n"
 "\t<dt>XXXXX1 ja XXXXX2</dt>\n"
 "    <dd>oikeat opiskelijanumerot</dd>\n"
-"\t<dt>X1 (integer)</dt> <p>Profiilisi id on <b>%(id)s</b>.</p>\n"
+"\t<dt>X1 (integer)</dt>\n"
+"    <dd>Toivotun arovstelijan userprofile id. Sinun userprofile id on <b>%(id)s</b>.</dd>\n"
 "\t<dt>Z1 ja Z2 (integers)</dt>\n"
 "    <dd>tehtävien IDt</dd>\n"
 "</dl>\n"
