fixed spelling mistakes and recompiled translations

--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-09 14:54+0300\n"
+"POT-Creation-Date: 2018-04-09 14:55+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -736,8 +736,6 @@ msgid "A new student group was created."
 msgstr "Luotiin uusi opiskelijaryhmä."
 
 #: deviations/forms.py:25
-#, fuzzy
-#| msgid "Amount of extra time given in minutes."
 msgid ""
 "Amount of extra time given in minutes. Leave blank if you fill in the date "
 "below."
@@ -2645,7 +2643,7 @@ msgstr ""
 #| "\t\t\t"
 msgid ""
 "\n"
-"\t\t\tFor this service also API token is tranferred,\n"
+"\t\t\tFor this service also API token is transferred,\n"
 "\t\t\tthus giving this service access to A+ API with your privileges.\n"
 "\t\t\tIf this was not intended, change 'Enable api access' in django admin.\n"
 "\t\t\t"
@@ -2662,9 +2660,19 @@ msgstr ""
 "\t\t\t"
 
 #: external_services/templates/external_services/lti_form.html:29
+#, fuzzy
+#| msgid ""
+#| "\n"
+#| "\t\t\tFor this service also API token is tranferred,\n"
+#| "\t\t\tthus giving this service access to A+ API with your privileges.\n"
+#| "\t\t\tThat means service can for example read your student number,\n"
+#| "\t\t\tcourse progress and submit solutions to exercises.\n"
+#| "\t\t\tCourse staff has enabled this feature and have checked that\n"
+#| "\t\t\tthe service behaves with your best interest in mind.\n"
+#| "\t\t\t"
 msgid ""
 "\n"
-"\t\t\tFor this service also API token is tranferred,\n"
+"\t\t\tFor this service also API token is transferred,\n"
 "\t\t\tthus giving this service access to A+ API with your privileges.\n"
 "\t\t\tThat means service can for example read your student number,\n"
 "\t\t\tcourse progress and submit solutions to exercises.\n"
