Add dropdowns for tagging students
Add user_id to CachedStudents

Report username and email separately in CachedStudents

Instead of claiming that a user's username is their email if the email
is missing.

Add dropdown to participants list

Fix dropdown styling

- Decrease footer z-index to 990 so dropdown remains above it
- Change dropdown to dropup if it would go offscreen otherwise

Insert the tag into the tags list once the tagging has been added

Pass course instance directly to tags_context

instead of relying on tag with index 0. Fixes case of user with no tags.

Escape slashes in participants list

so that we don't crash if a participant contains </script>

Render tagging dropdown in _tags.html

create_tagging_dropdown must be passed as a global function variable to avoid
fetching tag list from the API O(n) times.

Optionally get the get_users function from the environment

to allow tagging multiple students at once

Add dummy checkboxes to participants list

Change .click(...) to .on('click', ...) in a.order-toggle

for consistency with rest of file

Check or uncheck the 'select all' -box when an individual's box changes state

Select/unselect all when clicking the select all checkbox

Tag all selected users

Add tag html for all selected users, not just the first one

Get api url using reverse

Display tagging dropdown only if is_teacher

Add dropdown to _profiles.html list

Add tag id to tag_ids

Add of which selected

--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -689,7 +689,11 @@ msgstr "Suodata listaa"
 msgid "Number of students"
 msgstr "Opiskelijoiden määrä"
 
-#: course/templates/course/staff/participants.html:39
+#: course/templates/course/staff/participants.html:37
+msgid "of which selected"
+msgstr "joista valittuna"
+
+#: course/templates/course/staff/participants.html:48
 #: diploma/templates/diploma/list.html:27
 #: exercise/templates/exercise/staff/user_results.html:24
 msgid "Student id"
