Remove stray slash from LTIService's help_text

--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-06-26 14:40+0300\n"
+"POT-Creation-Date: 2018-06-26 18:11+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -2530,13 +2530,19 @@ msgid "Public service, allow API access"
 msgstr "Julkinen palvelu, API-käyttöoikeus"
 
 #: external_services/models.py:57
+#, fuzzy
+#| msgid ""
+#| "Select whether to pass pseudonymised user data to the LTI service.</"
+#| "br>Public services can also enable sharing the user's API token and "
+#| "course API URL in the LTI launch request. This grants the LTI tool API "
+#| "access with the user's privileges."
 msgid ""
-"Select whether to pass pseudonymised user data to the LTI service.</"
-"br>Public services can also enable sharing the user's API token and course "
-"API URL in the LTI launch request. This grants the LTI tool API access with "
-"the user's privileges."
+"Select whether to pass pseudonymised user data to the LTI service.<br>Public "
+"services can also enable sharing the user's API token and course API URL in "
+"the LTI launch request. This grants the LTI tool API access with the user's "
+"privileges."
 msgstr ""
-"Valitse lähetetäänkö palvelulle pseudonymisoidut käyttäjätiedot.</"
+"Valitse lähetetäänkö palvelulle pseudonymisoidut käyttäjätiedot.<"
 "br>Julkisille palveluille voidaan myös myöntää käyttöoikeus käyttäjän API-"
 "avaimeen ja kurssin API-URL:ään."
 
