--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-07-09 12:54+0300\n"
+"POT-Creation-Date: 2018-07-12 19:29+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1652,7 +1652,11 @@ msgstr "Tämä kurssi on arkistoitu ({date})."
 msgid "You cannot enroll in the course."
 msgstr "Et voi ilmoittautua kurssille."
 
-#: exercise/exercise_models.py:486
+#: exercise/exercise_models.py:500
+msgid "Staff can submit exercises without enrolling."
+msgstr "Henkilökunta voi palauttaa tehtäviä ilmoittautumatta."
+
+#: exercise/exercise_models.py:503
 msgid "You must enroll at course home to submit exercises."
 msgstr "Palauttaaksesi tehtäviä sinun pitää ilmoittautua kurssin etusivulla."
 
@@ -1692,7 +1696,15 @@ msgstr ""
 msgid "You have used the allowed amount of submissions for this exercise."
 msgstr "Olet käyttänyt kaikki tehtävän palautuskerrat."
 
-#: exercise/exercise_models.py:652
+#: exercise/exercise_models.py:574
+msgid ""
+"Cannot submit exercise due to unknown reason. If you think this is an error, "
+"please contact course staff."
+msgstr ""
+"Tehtävää ei voitu palauttaa tuntemattomasta syystä. Jos uskot tämän olevan "
+"virhe, ota ystävällisesti yhteyttä kurssihenkilökuntaan."
+
+#: exercise/exercise_models.py:680
 msgid "Default: [hostname]/[course:url]/[instance:url]/"
 msgstr "Oletus: [hostname]/[course:url]/[instance:url]/"
 
