--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-07-06 19:36+0300\n"
+"POT-Creation-Date: 2018-07-09 12:54+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1719,7 +1719,14 @@ msgstr "Avaa tehtävä iframe-kehyksessä A+-sivun sisällä uuden ikkunan sijas
 msgid "Exercise must be located in the LTI domain."
 msgstr "Tehtävän tulee sijaita LTI-palvelun domainissa."
 
-#: exercise/exercise_models.py:787
+#: exercise/exercise_models.py:674
+msgid ""
+"The exercise can not be loaded because the external LTI service has been "
+"disabled."
+msgstr ""
+"Tehtävää ei voi ladata, koska ulkoinen LTI-palvelu on poistettu käytöstä."
+
+#: exercise/exercise_models.py:796
 msgid ""
 "File names that user should submit, use pipe character to separate files"
 msgstr ""
