--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-08-22 23:32+0300\n"
-"PO-Revision-Date: 2018-08-22 23:33+0200\n"
+"POT-Creation-Date: 2018-09-19 02:42+0300\n"
+"PO-Revision-Date: 2018-09-19 02:42+0200\n"
 "Last-Translator: Jaakko Kantojärvi <jaakko.kantojarvi@aalto.fi>\n"
 "Language-Team: Finnish <>\n"
 "Language: fi_FI\n"
@@ -1015,10 +1015,12 @@ msgid ""
 "Request for a course configuration failed with error '{error!s}'. "
 "Configuration of course aborted."
 msgstr ""
+"Kurssikonfigurointipyyntö epäonnistui virheellä '{error!s}'. Konfigurointi "
+"keskeytettiin."
 
 #: edit_course/operations/configure.py:235
 msgid "JSON parser raised error '{error!s}'. Configuration of course aborted."
-msgstr ""
+msgstr "JSON parseri tuotti virheen '{error!s}'. Konfigurointi keskeytettiin."
 
 #: edit_course/operations/configure.py:261
 msgid "Assistants must be given as a student ID array."
@@ -1030,6 +1032,8 @@ msgid ""
 "Adding the assistant failed, because an associated user with student ID {id} "
 "does not exist."
 msgstr ""
+"Assistentin lisääminen epäonnistui, sillä käyttäjää opiskelijanumerolla {id} "
+"ei ole olemassa."
 
 #: edit_course/operations/configure.py:279
 msgid "Categories required as an object."
@@ -1872,6 +1876,8 @@ msgid ""
 "Invalid POST data:\n"
 "{error}"
 msgstr ""
+"Epäkelvollinen POST sisältö:\n"
+"{error}"
 
 #: exercise/staff_views.py:260
 msgid "New submission stored."
@@ -2199,12 +2205,6 @@ msgstr "Näytä kaikki palautukset"
 
 #: exercise/templates/exercise/exercise_plain.html:90
 #, python-format
-#| msgid ""
-#| "\n"
-#| "                        For an unknown reason you arrived somewhere that "
-#| "does not exist.\n"
-#| "                        Please, try again.\n"
-#| "                        "
 msgid ""
 "\n"
 "                                                %(points)s points required "
@@ -2918,6 +2918,8 @@ msgid ""
 "Failed to login the user. Shibboleth META headers missing. Check the Apache "
 "mod_shibd is active and /shibboleth is protected."
 msgstr ""
+"Käyttäjän kirjaaminen sisään epäonnistui. Shibboleth META otsikot puuttuvat. "
+"Tarkista että Apache mod_shibd on aktiivinen ja /shibboleth on suojattu."
 
 #: shibboleth_login/views.py:38
 msgid "The user account has been disabled."
@@ -3084,4 +3086,3 @@ msgstr ""
 "Käyttäjätilisi tietoja, kuten <strong>sähköpostiosoitetta</strong> tai "
 "<strong>salasanaa</strong>, voit muokata kirjautumiseen käyttämässäsi "
 "palvelussa."
-
