--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-09-19 02:44+0300\n"
+"POT-Creation-Date: 2018-09-25 17:29+0300\n"
 "PO-Revision-Date: 2018-09-19 02:21+0200\n"
 "Last-Translator: Jaakko Kantojärvi <jaakko.kantojarvi@aalto.fi>\n"
 "Language-Team: Finnish <>\n"
@@ -991,7 +991,20 @@ msgstr "Oppimisolio vaatii kategorian."
 msgid "Unknown category '{category}'."
 msgstr "Tuntematon kategoria '{category}'."
 
-#: edit_course/operations/configure.py:200
+#: edit_course/operations/configure.py:114
+#, python-brace-format
+msgid ""
+"The site has no configuration for the LTI service '{lti_label}' used by the "
+"LTI exercise '{exercise_key}'. You may have misspelled the value for the "
+"field 'lti' or the site administrator has not yet added the configuration "
+"for the LTI service. The exercise was not created/updated due to the error."
+msgstr ""
+"Sivustolla ei ole asetuksia LTI-palvelulle '{lti_label}', jota käyttää LTI-"
+"tehtävä '{exercise_key}'. Olet mahdollisesti kirjoittanut väärin kentän "
+"'lti' arvon tai sivuston ylläpitäjä ei ole vielä lisännyt tämän LTI-palvelun "
+"asetuksia. Tehtävää ei luotu/päivitetty tämän virheen takia."
+
+#: edit_course/operations/configure.py:216
 msgid "Cannot request build log from build_log_url when it is blank."
 msgstr "Käännöslokin hakeminen ei onnistu jos build_log_url on tyhjä."
 
