Fix translation syntax

--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -2914,9 +2914,9 @@ msgstr ""
 "\t\t\t \n"
 "\t\t\tLisäksi palvelulle lähetetään <a href=\"https://en.wikipedia.org/wiki/"
 "Access_token\" rel=\"noopener nofollow\" target=\"_blank\" class=\"alert-link"
-"\">pääsyavain</a>, joka mahdollistaa palvelun pääsyn {{brand}}:n API:n sinun "
+"\">pääsyavain</a>, joka mahdollistaa palvelun pääsyn %(brand)s:n API:n sinun "
 "oikeuksillasi.\n"
-"\t\t\tMikäli näin ei pitäisi tapahtua, niin ota yhteyttä {{brand}}:n "
+"\t\t\tMikäli näin ei pitäisi tapahtua, niin ota yhteyttä %(brand)s:n "
 "ylläpitoon.\n"
 "\t\t\t"
 
@@ -2970,7 +2970,7 @@ msgid ""
 msgstr ""
 "\n"
 "\tTätä palvelua ylläpitävät eri toimijat samassa organisaatiossa meidän "
-"({{brand}}) kanssamme.\n"
+"(%(brand)s) kanssamme.\n"
 "\t "
 
 #: external_services/templates/external_services/_privacy.html:84
