Improve the validation of URL keys
The validation of URL keys of courses, course instances,
course modules and learning objects disallows values consisting
of only the period "." and the validation error message is more
descriptive.

--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -3142,6 +3142,11 @@ msgstr "Haettua resurssia ei löytynyt kurssipalvelusta!"
 msgid "Connecting to the course service failed with {code}!"
 msgstr "Yhteys kurssipalveluun epäonnistui virheellä {code}!"
 
+#: lib/validators.py:12
+msgid "URL keys may consist of alphanumeric characters, hyphen and period."
+msgstr ""
+"URL-avaimet voivat sisältää kirjaimia, numeroita, yhdysmerkin ja pisteen."
+
 #: news/models.py:13
 msgid "No alert"
 msgstr "Ei hälytystä"
